# simple-chatting-application

./: .gitignore  README.md
chat-frontend/: package-lock.json  package.json  tailwind.config.ts
chat-frontend/src/app/: globals.css  layout.tsx  page.tsx
chat-frontend/src/app/enter/: page.tsx
chat-frontend/src/app/rooms/: page.tsx
chat-frontend/src/app/rooms/[roomId]/: page.tsx
chat-frontend/src/app/signup/: page.tsx
chat-frontend/src/components/: Modal.tsx
chat-frontend/src/lib/: api.ts
chat-server/: pyproject.toml  t"}'
chat-server/app/: create_tables.py  db.py  main.py  models.py  redis_client.py  schemas.py
